// gateway.proto - gRPC service definitions for Gateway communication
//
// This file defines the GatewayService which provides session management,
// message handling, and streaming responses for user-facing communication
// with the orchestrator.
//
// Copyright 2026 baaaht project

syntax = "proto3";

package gateway.v1;

option go_package = "github.com/billm/baaaht/orchestrator/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "proto/common.proto";

// =============================================================================
// Gateway Service
// =============================================================================

// GatewayService provides core gateway operations for user interaction
service GatewayService {
  // Session Management

  // CreateGatewaySession creates a new gateway session for a user
  rpc CreateGatewaySession(CreateGatewaySessionRequest) returns (CreateGatewaySessionResponse);

  // GetGatewaySession retrieves a gateway session by its ID
  rpc GetGatewaySession(GetGatewaySessionRequest) returns (GetGatewaySessionResponse);

  // ListGatewaySessions retrieves all gateway sessions matching the specified filter
  rpc ListGatewaySessions(ListGatewaySessionsRequest) returns (ListGatewaySessionsResponse);

  // CloseGatewaySession closes a gateway session
  rpc CloseGatewaySession(CloseGatewaySessionRequest) returns (CloseGatewaySessionResponse);

  // Message Handling

  // GatewaySendMessage sends a message to a gateway session
  rpc GatewaySendMessage(GatewaySendMessageRequest) returns (GatewaySendMessageResponse);

  // StreamChat establishes a bidirectional stream for real-time chat with response streaming
  rpc StreamChat(stream StreamChatRequest) returns (stream StreamChatResponse);

  // StreamResponses establishes a server-side stream for receiving response chunks
  rpc StreamResponses(StreamResponsesRequest) returns (stream StreamResponsesResponse);

  // Subscription

  // SubscribeToEvents subscribes to gateway events for a session
  rpc SubscribeToEvents(SubscribeToEventsRequest) returns (stream GatewayEvent);

  // Health and Status

  // HealthCheck returns the health status of the gateway
  rpc HealthCheck(google.protobuf.Empty) returns (GatewayHealthCheckResponse);

  // GetStatus returns the current status of the gateway
  rpc GetStatus(google.protobuf.Empty) returns (GatewayStatusResponse);
}

// =============================================================================
// Gateway Session Types
// =============================================================================

// GatewaySession represents a user gateway session
message GatewaySession {
  string id = 1;
  GatewaySessionState state = 2;
  common.v1.Status status = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp expires_at = 6;  // Optional
  google.protobuf.Timestamp closed_at = 7;   // Optional
  GatewaySessionMetadata metadata = 8;
  GatewaySessionConfig config = 9;
  string orchestrator_session_id = 10;       // Link to orchestrator session
}

// GatewaySessionState represents the lifecycle state of a gateway session
enum GatewaySessionState {
  GATEWAY_SESSION_STATE_UNSPECIFIED = 0;
  GATEWAY_SESSION_STATE_INITIALIZING = 1;
  GATEWAY_SESSION_STATE_ACTIVE = 2;
  GATEWAY_SESSION_STATE_IDLE = 3;
  GATEWAY_SESSION_STATE_CLOSING = 4;
  GATEWAY_SESSION_STATE_CLOSED = 5;
}

// GatewaySessionMetadata contains descriptive information about a gateway session
message GatewaySessionMetadata {
  string name = 1;
  string description = 2;           // Optional
  map<string, string> labels = 3;
  string user_id = 4;               // Optional
  repeated string tags = 5;
  string client_type = 6;           // web, cli, api, etc.
  string client_version = 7;        // Optional
}

// GatewaySessionConfig contains configuration for a gateway session
message GatewaySessionConfig {
  int64 timeout_ns = 1;             // Session timeout in nanoseconds
  int64 idle_timeout_ns = 2;        // Idle timeout in nanoseconds
  bool enable_streaming = 3;
  int32 max_message_size = 4;       // Maximum message size in bytes
  StreamConfig stream_config = 5;
  SessionSecurity security = 6;
}

// StreamConfig defines streaming behavior
message StreamConfig {
  int64 chunk_size = 1;             // Chunk size for streaming responses
  int64 chunk_delay_ns = 2;         // Delay between chunks in nanoseconds
  bool enable_delta = 3;            // Enable delta updates for streaming
}

// SessionSecurity defines security settings for a session
message SessionSecurity {
  bool require_auth = 1;
  repeated string allowed_origins = 2;
  bool enable_encryption = 3;
}

// =============================================================================
// Message Types
// =============================================================================

// GatewayMessage represents a message in the gateway
message GatewayMessage {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  GatewayMessageRole role = 3;
  string content = 4;
  GatewayMessageMetadata metadata = 5;
}

// GatewayMessageRole represents the role of the message sender
enum GatewayMessageRole {
  GATEWAY_MESSAGE_ROLE_UNSPECIFIED = 0;
  GATEWAY_MESSAGE_ROLE_USER = 1;
  GATEWAY_MESSAGE_ROLE_SYSTEM = 2;
  GATEWAY_MESSAGE_ROLE_ASSISTANT = 3;
}

// GatewayMessageMetadata contains additional information about a message
message GatewayMessageMetadata {
  string session_id = 1;
  string correlation_id = 2;        // Optional, for request/response tracking
  string model = 3;                 // Optional, for LLM requests
  map<string, string> extra = 4;
  int32 tokens_used = 5;            // Optional, for LLM responses
}

// =============================================================================
// Event Types
// =============================================================================

// GatewayEvent represents a gateway event
message GatewayEvent {
  string id = 1;
  GatewayEventType type = 2;
  string source = 3;
  google.protobuf.Timestamp timestamp = 4;
  map<string, string> data = 5;
  GatewayEventMetadata metadata = 6;
}

// GatewayEventType represents the type of gateway event
enum GatewayEventType {
  GATEWAY_EVENT_TYPE_UNSPECIFIED = 0;
  GATEWAY_EVENT_TYPE_SESSION_CREATED = 1;
  GATEWAY_EVENT_TYPE_SESSION_UPDATED = 2;
  GATEWAY_EVENT_TYPE_SESSION_CLOSED = 3;
  GATEWAY_EVENT_TYPE_MESSAGE_SENT = 4;
  GATEWAY_EVENT_TYPE_MESSAGE_RECEIVED = 5;
  GATEWAY_EVENT_TYPE_STREAM_STARTED = 6;
  GATEWAY_EVENT_TYPE_STREAM_CHUNK = 7;
  GATEWAY_EVENT_TYPE_STREAM_COMPLETE = 8;
  GATEWAY_EVENT_TYPE_STREAM_ERROR = 9;
  GATEWAY_EVENT_TYPE_ERROR = 10;
}

// GatewayEventMetadata contains additional information about an event
message GatewayEventMetadata {
  string session_id = 1;            // Optional
  string message_id = 2;            // Optional
  string user_id = 3;               // Optional
  string correlation_id = 4;        // Optional
  map<string, string> labels = 5;
  common.v1.Priority priority = 6;
}

// =============================================================================
// Response Streaming Types
// =============================================================================

// ResponseChunk represents a chunk of a streaming response
message ResponseChunk {
  string chunk_id = 1;
  int32 sequence = 2;
  bytes data = 3;
  string text = 4;                  // Optional, for text responses
  bool is_delta = 5;                // Whether this is a delta update
  bool is_final = 6;                // Whether this is the final chunk
  ChunkMetadata metadata = 7;
}

// ChunkMetadata contains metadata for a response chunk
message ChunkMetadata {
  google.protobuf.Timestamp timestamp = 1;
  string content_type = 2;
  int64 total_bytes = 3;            // Optional, total bytes when known
  double progress = 4;              // Optional, 0.0 to 1.0
  map<string, string> extra = 5;
}

// StreamStatus represents the status of a stream
message StreamStatus {
  StreamState state = 1;
  string message = 2;               // Optional
  int64 bytes_sent = 3;
  int64 chunks_sent = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp ended_at = 6;    // Optional
}

// StreamState represents the state of a stream
enum StreamState {
  STREAM_STATE_UNSPECIFIED = 0;
  STREAM_STATE_INITIALIZING = 1;
  STREAM_STATE_ACTIVE = 2;
  STREAM_STATE_PAUSED = 3;
  STREAM_STATE_COMPLETE = 4;
  STREAM_STATE_ERROR = 5;
  STREAM_STATE_CANCELLED = 6;
}

// =============================================================================
// Request/Response Messages - Session Operations
// =============================================================================

// CreateGatewaySessionRequest
message CreateGatewaySessionRequest {
  GatewaySessionMetadata metadata = 1;
  GatewaySessionConfig config = 2;
}

// CreateGatewaySessionResponse
message CreateGatewaySessionResponse {
  string session_id = 1;
  GatewaySession session = 2;
}

// GetGatewaySessionRequest
message GetGatewaySessionRequest {
  string session_id = 1;
}

// GetGatewaySessionResponse
message GetGatewaySessionResponse {
  GatewaySession session = 1;
}

// ListGatewaySessionsRequest
message ListGatewaySessionsRequest {
  GatewaySessionFilter filter = 1;
}

// GatewaySessionFilter defines filters for querying gateway sessions
message GatewaySessionFilter {
  GatewaySessionState state = 1;   // Optional
  common.v1.Status status = 2;     // Optional
  string user_id = 3;              // Optional
  map<string, string> labels = 4;  // Optional, match all if empty
}

// ListGatewaySessionsResponse
message ListGatewaySessionsResponse {
  repeated GatewaySession sessions = 1;
  int32 total_count = 2;
}

// CloseGatewaySessionRequest
message CloseGatewaySessionRequest {
  string session_id = 1;
  string reason = 2;               // Optional
}

// CloseGatewaySessionResponse
message CloseGatewaySessionResponse {
  string session_id = 1;
  GatewaySessionState state = 2;
}

// =============================================================================
// Request/Response Messages - Message Operations
// =============================================================================

// GatewaySendMessageRequest
message GatewaySendMessageRequest {
  string session_id = 1;
  GatewayMessage message = 2;
}

// GatewaySendMessageResponse
message GatewaySendMessageResponse {
  string message_id = 1;
  string session_id = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// StreamChatRequest
message StreamChatRequest {
  string session_id = 1;
  oneof payload {
    GatewayMessage message = 2;
    google.protobuf.Empty heartbeat = 3;
    CancelStream cancel = 4;
  }
}

// CancelStream cancels an ongoing stream
message CancelStream {
  string reason = 1;               // Optional
  bool force = 2;
}

// StreamChatResponse
message StreamChatResponse {
  oneof payload {
    ResponseChunk chunk = 1;
    GatewayEvent event = 2;
    StreamStatus status = 3;
    google.protobuf.Empty heartbeat = 4;
  }
}

// StreamResponsesRequest
message StreamResponsesRequest {
  string session_id = 1;
  string message_id = 2;           // Optional, if responding to a specific message
  StreamOptions options = 3;       // Optional
}

// StreamOptions defines options for streaming responses
message StreamOptions {
  int64 chunk_size = 1;            // Preferred chunk size
  bool include_events = 2;         // Include events in stream
  bool include_metadata = 3;       // Include metadata in stream
}

// StreamResponsesResponse
message StreamResponsesResponse {
  oneof payload {
    ResponseChunk chunk = 1;
    StreamStatus status = 2;
    google.protobuf.Empty heartbeat = 3;
  }
}

// =============================================================================
// Request/Response Messages - Event Subscription
// =============================================================================

// SubscribeToEventsRequest
message SubscribeToEventsRequest {
  string session_id = 1;
  GatewayEventFilter filter = 2;   // Optional
}

// GatewayEventFilter defines a filter for gateway events
message GatewayEventFilter {
  GatewayEventType type = 1;       // Optional, unset means all types
  string source = 2;               // Optional, unset means all sources
  common.v1.Priority priority = 3; // Optional
  map<string, string> labels = 4;  // Optional, match all if empty
  google.protobuf.Timestamp start_time = 5;   // Optional
  google.protobuf.Timestamp end_time = 6;     // Optional
}

// =============================================================================
// Request/Response Messages - Health and Status
// =============================================================================

// GatewayHealthCheckResponse
message GatewayHealthCheckResponse {
  common.v1.Health health = 1;
  string version = 2;
  repeated string subsystems = 3;
}

// GatewayStatusResponse
message GatewayStatusResponse {
  common.v1.Status status = 1;
  int32 active_sessions = 2;
  int32 active_streams = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp uptime = 5;
}
